# YT_Sentiment_Analyzer

./: API_Quota.md  README.md  pyproject.toml  setup.py
YT_Sentiment/: LICENSE
YT_Sentiment/src/YT_Sentiment/: test_analyze.py
src/YT_Sentiment/: analyze.py  test_analyze.py
src/YT_Sentiments/: __init__.py  sentiment.py  test_analyze.py
src/YT_Sentiments/helpers/: __init__.py  sentimentScore.py  ytComments.py
