[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "YT_Sentiment"
version = "0.0.1"
authors = [
  { name="Zheng Jiawen", email="zhengjiawen44@gmail.com" },
]
description = "A python package that allows you to perform sentiment analysis on Youtube comments"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "emoji>=2.12.1",
  "google_api_python_client>=2.139.0",
  "vaderSentiment>=3.3.2",
  "vaderSentiment>=3.3.2",
]
[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
